pequeño refactor